fixtures/errors/incomplete_fn/lib/incomplete_fn.esc
fn add(a: number, b: number) -> number {
    return a + b
}
// TODO: return `nil` if we can't parse a valid function
// fn
val x = 5
